2007-02-29  Richard Frith-Macdonald <rfm@gnu.org>

	* common.make: Fixup -I (when in non-flattened mode) to use the
	generic library combo subdirectory as well as the full machine/os
	specific version.

2007-02-28  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: On MinGW, install the config file in
	/etc/GNUstep/GNUstep.conf.
	* configure: Regenerated.
	* FilesystemLayouts/mingw: New layout.
	* Documentation/README.MinGW: Updated, including instructions to
	prepare standalone binary applications that can be shipped to
	end-users (experimental).
	
2007-02-26  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/filesystem.texi: Updated the first half of the
	document for relocatable filesystem layouts.  Second half still
	to do.
	* FilesystemLayouts/gnustep-with-network: New layout.
	* FilesystemLayouts/README: Fixed name of gnustep filesystem
	layout.
	
2007-02-26  Nicola Pero  <nicola.pero@meta-innovation.com>

	* gnustep-config.in: Updated help for the change of variable names
	from GNUSTEP_SYSTEM_DOCUMENTATION to GNUSTEP_SYSTEM_DOC.

2007-02-26  Graham Lee   <leeg@thaesofereode.info>

	* gnustep-config.in: Bugfix to a test which stopped '--help' from
	working.

2007-02-26  Nicola Pero  <nicola.pero@meta-innovation.com>

	tcsh 6.12 has a 30 char limit on variable names, so
	GNUSTEP_SYSTEM_DOCUMENTATION_MAN has been renamed to
	GNUSTEP_SYSTEM_DOC_MAN (and similar consistent changes to all
	variables everywhere).
	* filesystem.csh.in: Use GNUSTEP_SYSTEM_DOC instead of
	GNUSTEP_SYSTEM_DOCUMENTATION, GNUSTEP_SYSTEM_DOC_MAN instead of
	GNUSTEP_SYSTEM_DOCUMENTATION_MAN, GNUSTEP_SYSTEM_DOC_INFO instead
	of GNUSTEP_SYSTEM_DOCUMENTATION_INFO (and similar changes to all
	other DOCUMENTATION variables).
	* filesystem.sh.in: Same change.
	* configure.ac: Same change.
	* FilesystemLayouts/fhs: Same change.
	* FilesystemLayouts/fhs-system: Same change.
	* FilesystemLayouts/gnustep: Same change.
	* FilesystemLayouts/windows: Same change.