@@ -1,5 +1,10 @@
 2007-02-29  Richard Frith-Macdonald <rfm@gnu.org>
 
+	* relative_path.sh: Fix for the case where the tweo arguments are
+	identical paths.
+
+2007-02-29  Richard Frith-Macdonald <rfm@gnu.org>
+
 	* common.make: Fixup -I (when in non-flattened mode) to use the
 	generic library combo subdirectory as well as the full machine/os
 	specific version.
